@startuml
'https://plantuml.com/class-diagram

class Formation{
'ATTRIBUTS
- string libellé
- int nbPlaces
- DateTime dateDebut
- DateTime dateFin
- array Inscriptions

'METHODES
+ inscrireSalarie(Salarie $salarie)
+ noterSalarie(float $note, Salarie $salarie, string $appreciation)
}

class Entreprise{
- string nomEntreprise
- string rueEntreprise
- string villeEntreprise
- int $cpEntreprise
}

class Salarie{
- string prenomSalarie
- string nomSalarie
- Entreprise entreprise
}

class Inscription{
- float noteInscription
- string appreciation
- Salarie salarie
}

Formation "1..1"-->"0..*" Inscription
Inscription "0..*"-->"1..1" Salarie
Salarie "0..*"-->"1..1" Entreprise

@enduml